@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + getType():boolean
 }


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getType():boolean
}
AbstractAircraft <|-- MobEnemy

class EliteEnemy {
    - shootNum:int
    - power:int
    - direction:int
    - prop:AbstractProp
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getType():boolean
}
AbstractAircraft <|--EliteEnemy

class BossEnemy {
    - shootNum:int
    - power:int
    - direction:int
    - prop:AbstractProp
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getType():boolean
}
AbstractAircraft <|--BossEnemy

interface EnemyFactory {
    + {abstract} createEnemy():AbstractAircraft
}

class MobFactory {
    + createEnemy():AbstractAircraft
}

class EliteFactory {
    + createEnemy():AbstractAircraft
}

EnemyFactory <|.. MobFactory
EnemyFactory <|.. EliteFactory
MobFactory ..> MobEnemy
EliteFactory ..> EliteEnemy




abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract} function():HeroAircraft
}

class BloodProp {
    - hpRaise:int
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + function():HeroAircraft
}

class FireProp{
    + FireProp(int locationX, int locationY, int speedX, int speedY)
    + function():HeroAircraft
    + forward():void
}

class BombProp{
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + function():HeroAircraft
    + forward():void
}

AbstractProp <|-- BloodProp
AbstractProp <|-- FireProp
AbstractProp <|-- BombProp

interface PropFactory {
    + {abstract} createProp(int locationX, int locationY):AbstractProp
}

class BloodFactory {
    + createProp(int locationX, int locationY):AbstractProp
}

class FireFactory {
    + createProp(int locationX, int locationY):AbstractProp
}

class BombFactory {
    + createProp(int locationX, int locationY):AbstractProp
}

PropFactory <|.. BloodFactory
PropFactory <|.. FireFactory
PropFactory <|.. BombFactory
BloodFactory ..> BloodProp
FireFactory ..> FireProp
BombFactory ..> BombProp



AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

@enduml